# TSC

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG  INSTALL.md  README.md
smc/: .dir-locals.el  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  Doxyfile  Rakefile  config.h.in  config.hpp.in  configure.ac  icon.rc.in  mruby-pcre.patch  mruby_smc_build_config.rb
smc/cmake/modules/: FindCEGUI.cmake  FindPhysFS.cmake
smc/cmake/toolchains/: linux2mingw32.cmake  linux2mingw32.mruby_build_config.rb
smc/data/editor/: level_items.xml  level_menu.xml
smc/data/levels/: lvl_1_sub.smclvl  menu_brown_1.smclvl  quintus_5_top.smclvl  sauer2_7.smclvl
smc/data/scripting/: main.rb
smc/data/translations/: Secret Maryo Chronicles.pot  de.po  el.po  es.po  fi_FI.po  fr.po  it.po  nl.po  nn.po  pl.po  pt_BR.po  ru.po  tr.po  zh_TW.po
smc/docs/: api_introduction.md  authors.txt  settings_files.txt  smcdoxy.css
smc/docs/licenses/: Lua.txt
smc/docs/pages/: conventions.md  history.md  mruby_sprite_management.md  scripting.md  settings_files.md  translating.md
smc/docs/scripting/: animated_sprite.md  audio.md  audio_class.md  eato.md  enemy.md  flyon.md  furball.md  gee.md  gen_docs.rb  gen_docs.sh  index.md  input_class.md  level_class.md  level_player.md  message.md  moving_sprite.md  particle_emitter.md  sprite.md  ssl.rdoc  style.css  template.html.erb  timer.md
smc/extras/archlinux/: PKGBUILD  smc.desktop
smc/lua/: CMakeLists.txt
smc/src/: ##credits.cpp##  Makefile.am  credits.cpp  credits.cpp~
smc/src/audio/: audio.cpp  audio.h  audio.hpp  random_sound.cpp  random_sound.h  random_sound.hpp  sound_manager.cpp  sound_manager.h  sound_manager.hpp
smc/src/campaign/: campaign_loader.cpp  campaign_loader.h  campaign_loader.hpp  campaign_manager.cpp  campaign_manager.h  campaign_manager.hpp
smc/src/core/: camera.cpp  camera.hpp  campaign_manager.cpp  campaign_manager.h  collision.cpp  collision.h  collision.hpp  editor.cpp  editor.h  errors.cpp  errors.h  errors.hpp  file_parser.cpp  file_parser.h  file_parser.hpp  framerate.cpp  framerate.h  framerate.hpp  game_core.cpp  game_core.h  game_core.hpp  gettext.h  global_basic.h  global_basic.hpp  global_game.h  global_game.hpp  i18n.cpp  i18n.h  i18n.hpp  main.cpp  main.h  main.hpp  obj_manager.h  obj_manager.hpp  property_helper.cpp  property_helper.h  property_helper.hpp  sprite_manager.cpp  sprite_manager.h  sprite_manager.hpp  (+3 more)
smc/src/enemies/: beetle.cpp  beetle.hpp  beetle_barrage.cpp  beetle_barrage.hpp  eato.cpp  eato.h  eato.hpp  enemy.cpp  enemy.h  enemy.hpp  flyon.cpp  flyon.h  flyon.hpp  furball.cpp  furball.h  furball.hpp  gee.cpp  gee.h  gee.hpp  krush.cpp  krush.h  krush.hpp  larry.cpp  larry.hpp  pip.cpp  pip.hpp  rokko.cpp  rokko.h  rokko.hpp  shell.cpp  shell.hpp  spika.cpp  spika.h  spika.hpp  spikeball.cpp  spikeball.h  spikeball.hpp  static.cpp  static.h  static.hpp  (+6 more)
smc/src/gui/: generic.cpp  generic.hpp  hud.cpp  hud.h  hud.hpp  menu.cpp  menu.h  menu.hpp  menu_data.cpp  menu_data.h  menu_data.hpp  spinner.cpp  spinner.h  spinner.hpp
smc/src/input/: joystick.cpp  joystick.h  joystick.hpp  keyboard.cpp  keyboard.h  keyboard.hpp  mouse.cpp  mouse.h  mouse.hpp
smc/src/level/: jump_event.cpp  level.cpp  level.h  level.hpp  level_background.cpp  level_background.h  level_background.hpp  level_editor.cpp  level_editor.h  level_editor.hpp  level_loader.cpp  level_loader.h  level_loader.hpp  level_manager.cpp  level_manager.h  level_manager.hpp  level_player.cpp  level_player.h  level_player.hpp  level_settings.cpp  level_settings.hpp
smc/src/lua/: events.cpp  events.h  lua_level_player.cpp  lua_level_player.h  lualibs.cpp  lualibs.h  luawrap.cpp  luawrap.hpp
smc/src/objects/: #movingsprite.cpp#  #path.cpp#  #sprite.cpp#  animated_sprite.cpp  animated_sprite.h  animated_sprite.hpp  ball.cpp  ball.h  ball.hpp  bonusbox.cpp  bonusbox.h  bonusbox.hpp  box.cpp  box.h  box.hpp  crate.cpp  crate.hpp  enemystopper.cpp  enemystopper.h  enemystopper.hpp  goldpiece.cpp  goldpiece.h  goldpiece.hpp  lava.cpp  lava.hpp  level_entry.cpp  level_entry.h  level_entry.hpp  level_exit.cpp  level_exit.h  level_exit.hpp  moving_platform.cpp  moving_platform.h  moving_platform.hpp  movingsprite.cpp  movingsprite.h  movingsprite.hpp  path.cpp  path.h  path.hpp  (+15 more)
smc/src/overworld/: #world_manager.cpp#  overworld.cpp  overworld.h  overworld.hpp  overworld_description_loader.cpp  overworld_description_loader.h  overworld_description_loader.hpp  overworld_layer_loader.cpp  overworld_layer_loader.h  overworld_layer_loader.hpp  overworld_loader.cpp  overworld_loader.h  overworld_loader.hpp  world_editor.cpp  world_editor.h  world_editor.hpp  world_layer.cpp  world_layer.h  world_layer.hpp  world_manager.cpp  world_manager.h  world_manager.hpp  world_player.cpp  world_player.hpp  world_sprite_manager.cpp  world_sprite_manager.h  world_sprite_manager.hpp  world_waypoint.cpp  world_waypoint.h  world_waypoint.hpp
smc/src/script/: events.cpp  events.h  lua_level_player.cpp  lua_level_player.h  lualibs.cpp  lualibs.h  luawrap.cpp  luawrap.hpp  script.cpp  script.h  scriptable_object.h
smc/src/scripting/: #scriptable_object.hpp#  #scripting.hpp#  scriptable_object.cpp  scriptable_object.h  scriptable_object.hpp  scripting.cpp  scripting.h  scripting.hpp
smc/src/user/: preferences.cpp  preferences.h  preferences.hpp  preferences_loader.cpp  preferences_loader.h  preferences_loader.hpp  savegame.cpp  savegame.h  savegame.hpp  savegame_loader.cpp  savegame_loader.h  savegame_loader.hpp
smc/src/video/: #renderer.cpp#  #video.cpp#  .video.cpp.swp  animation.cpp  animation.h  animation.hpp  color.h  color.hpp  font.cpp  font.h  font.hpp  gl_surface.cpp  gl_surface.h  gl_surface.hpp  img_manager.cpp  img_manager.h  img_manager.hpp  img_settings.cpp  img_settings.h  img_settings.hpp  renderer.cpp  renderer.h  video.h  (+3 more)
tsc/: CMakeLists.txt  Doxyfile  Rakefile  config.hpp.in  icon.rc.in  mruby_tsc_build_config.rb  optipng.sh
tsc/docs/: authors.txt  specialthanks.txt  tscdocxy.css
tsc/extras/: tsc.desktop
tsc/rakelib/: doc_helper_tasks.rake
(+2047 files in other folders)
