cmake_minimum_required(VERSION 2.8)

set(Lua_sources
  "lua-5.2.1/src/lapi.c"
  "lua-5.2.1/src/lapi.h"
  "lua-5.2.1/src/lauxlib.c"
  "lua-5.2.1/src/lauxlib.h"
  "lua-5.2.1/src/lbaselib.c"
  "lua-5.2.1/src/lbitlib.c"
  "lua-5.2.1/src/lcode.c"
  "lua-5.2.1/src/lcode.h"
  "lua-5.2.1/src/lcorolib.c"
  "lua-5.2.1/src/lctype.c"
  "lua-5.2.1/src/lctype.h"
  "lua-5.2.1/src/ldblib.c"
  "lua-5.2.1/src/ldebug.c"
  "lua-5.2.1/src/ldebug.h"
  "lua-5.2.1/src/ldo.c"
  "lua-5.2.1/src/ldo.h"
  "lua-5.2.1/src/ldump.c"
  "lua-5.2.1/src/lfunc.c"
  "lua-5.2.1/src/lfunc.h"
  "lua-5.2.1/src/lgc.c"
  "lua-5.2.1/src/lgc.h"
  "lua-5.2.1/src/linit.c"
  "lua-5.2.1/src/liolib.c"
  "lua-5.2.1/src/llex.c"
  "lua-5.2.1/src/llex.h"
  "lua-5.2.1/src/llimits.h"
  "lua-5.2.1/src/lmathlib.c"
  "lua-5.2.1/src/lmem.c"
  "lua-5.2.1/src/lmem.h"
  "lua-5.2.1/src/loadlib.c"
  "lua-5.2.1/src/lobject.c"
  "lua-5.2.1/src/lobject.h"
  "lua-5.2.1/src/lopcodes.c"
  "lua-5.2.1/src/lopcodes.h"
  "lua-5.2.1/src/loslib.c"
  "lua-5.2.1/src/lparser.c"
  "lua-5.2.1/src/lparser.h"
  "lua-5.2.1/src/lstate.c"
  "lua-5.2.1/src/lstate.h"
  "lua-5.2.1/src/lstring.c"
  "lua-5.2.1/src/lstring.h"
  "lua-5.2.1/src/lstrlib.c"
  "lua-5.2.1/src/ltable.c"
  "lua-5.2.1/src/ltable.h"
  "lua-5.2.1/src/ltablib.c"
  "lua-5.2.1/src/ltm.c"
  "lua-5.2.1/src/ltm.h"
  "lua-5.2.1/src/lua.c"
  "lua-5.2.1/src/lua.h"
  "lua-5.2.1/src/lua.hpp"
  "lua-5.2.1/src/luac.c"
  "lua-5.2.1/src/luaconf.h"
  "lua-5.2.1/src/lualib.h"
  "lua-5.2.1/src/lundump.c"
  "lua-5.2.1/src/lundump.h"
  "lua-5.2.1/src/lvm.c"
  "lua-5.2.1/src/lvm.h"
  "lua-5.2.1/src/lzio.c"
  "lua-5.2.1/src/lzio.h"
)
include_directories("${Lua_SOURCE_DIR}/lua-5.2.1/src")
add_library(lua STATIC
  ${Lua_sources})
